--- a/src/component/Product.css
+++ b/src/component/Product.css
@@ -1,11 +1,13 @@
 .product-card {
-    width: 450px;
+    width: 435px;
     border: 1px solid #ddd;
     border-radius: 8px;
-    
+    justify-content: center;
+    align-items: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 10px;
     margin: 10px;
+
   }
   
 .content {
@@ -27,10 +29,13 @@
     color: #333;
   }
  
-  @media only screen and (max-width: 600px) {
+  @media only screen and (max-width: 450px) {
   body{
     justify-content: center;
     align-items: center;
+  }
+  .product-card {
+    margin: 0;
   }
     
     
