--- a/src/component/Product.css
+++ b/src/component/Product.css
@@ -30,12 +30,12 @@
   }
  
   @media only screen and (max-width: 450px) {
-  body{
+
+  .product-card {
+    max-width: 420px;
     justify-content: center;
     align-items: center;
-  }
-  .product-card {
-    margin: 0;
+    
   }
     
     
